# keeper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose-simple.yml  docker-compose.yml  gunicorn.conf.py  nginx.conf  pyproject.toml  pytest.ini  requirements-backup.txt  requirements.txt  run.py  wsgi.py
.claude/: mcp.json
keeper/: __init__.py  app.py  cli.py  config.py
keeper/auth/: __init__.py  permissions.py  session.py
keeper/migrations/: __init__.py  kms_migration.py
keeper/models/: __init__.py  approval.py  audit_log.py  base.py  database.py  environment.py  secret.py  secret_version.py  user.py
keeper/schemas/: __init__.py  audit.py  environment.py  secret.py  user.py
keeper/services/: __init__.py  approval_service.py  audit_logger.py  aws_secrets.py  key_management.py  kms_service.py  sync_service.py  vault_client.py
keeper/static/css/: keeper.css
keeper/static/js/: keeper.js
keeper/templates/: base.html
keeper/templates/admin/: audit_logs.html  backend_config.html  create_user.html  edit_user_role.html  index.html  system_info.html  user_detail.html  users.html
keeper/templates/approvals/: detail.html  execute.html  index.html  request_rotation.html
keeper/templates/auth/: change_password.html  database_login.html  database_register.html  demo_login.html  login.html  profile.html
keeper/templates/environments/: create.html  detail.html  edit.html  index.html
keeper/templates/errors/: 403.html  404.html  500.html
keeper/templates/main/: about.html  dashboard.html  help.html  index.html
keeper/templates/secrets/: create.html  detail.html  edit.html  index.html  rotate.html
keeper/utils/: __init__.py  crypto.py  validation.py
keeper/views/: __init__.py  admin.py  api.py  approvals.py  auth.py  environments.py  main.py  secrets.py
logs/: .gitkeep
migrations/: 002_add_aes_columns.sql
scripts/: populate_demo_data.py
specs/bugs/: admin-template-failures-2025-09-20.md  unimplemented-features-assessment.md
specs/improvements/: improvements.md
specs/patterns/: data-handling-architecture.md
tests/: __init__.py  conftest.py  test_auth.py  test_models.py  test_services.py.skip  test_views.py
